<resources>
    <string name="app_name">Kyle System Clock</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>

    <!-- Alarm -->
    <string name="add_alarm">Add Alarm</string>
    <string name="alarm_time">Time</string>
    <string name="alarm_date">Date</string>
    <string name="alarm_state">This is Alarm State</string>
    <string name="title_activity_timer_set">Set Timer</string>

    <!-- Timer -->
    <string name="timer_set_set">Set</string>
    <string name="timer_reset">Reset</string>
    <string name="timer_start">Start</string>
    <string name="timer_set">Set</string>
    <string name="stop_clear">Clear</string>
    <string name="stop_start">Start</string>
    <string name="stop_record">Record</string>

</resources>
