<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:longClickable="true"
        android:layout_height="match_parent"
        android:elevation="5dp">

        <ImageView
            android:contentDescription="@string/alarm_state"
            android:id="@+id/alarm_image"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="#d35400"
            android:padding="10dp"
            android:src="@drawable/ic_alarm_on_white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#e67e22"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/alarm_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/toolbarTextColor"
                android:text="@string/alarm_time"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/alarm_date"
                android:textColor="@color/toolbarTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_date"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="#d35400"
            android:gravity="center">

            <Switch
                android:id="@+id/alarm_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
