<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="bottom">

        <TextView
            android:id="@+id/stop_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right"
            android:text="0"
            android:textColor="@color/timerTextColor"
            android:textSize="56sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@color/timerTextColor"
            android:textSize="56sp" />

        <TextView
            android:id="@+id/stop_minute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="right"
            android:text="0"
            android:textColor="@color/timerTextColor"
            android:textSize="72sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@color/timerTextColor"
            android:textSize="72sp" />

        <TextView
            android:id="@+id/stop_second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="0"
            android:textColor="@color/timerTextColor"
            android:textSize="72sp" />

        <TextView
            android:id="@+id/stop_milles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="0"
            android:textColor="@color/timerTextColor"
            android:textSize="24sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/stop_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="@drawable/recyclerview_background"
        android:elevation="5dp">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/stop_clear"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop_clear" />

        <Button
            android:id="@+id/stop_start"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop_start"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <Button
            android:id="@+id/stop_record"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop_record" />

    </LinearLayout>


</LinearLayout>
